# tts-normalizer

./: .gitignore  README.md  pyproject.toml
docs/: known-limitations.md
tests/: case_sets.py  run_linguist_batch1.py  run_linguist_batch2.py  run_linguist_batch3.py  run_linguist_batch4.py  run_linguist_es_batch1.py  run_linguist_ja_batch1.py  run_linguist_ja_batch2.py  run_linguist_limitations.py  test_case_sets.py  test_en.py  test_en_public.py  test_zh.py
tts_normalizer/: __init__.py  normalizer.py
tts_normalizer/languages/: __init__.py  base.py  en.py  es.py  ja.py  zh.py
tts_normalizer/rules/: __init__.py
tts_normalizer/utils/: __init__.py
