[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tts-normalizer"
version = "0.1.0"
description = "Multilingual TTS text normalizer — converts written symbols/numbers to spoken form"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tts_normalizer*"]
